[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Standalone maze generator usable as a reusable Python module."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.setuptools.packages.find]
include = ["mazegen*"]
